--- a/demo.ipynb
+++ b/demo.ipynb
@@ -64,6 +64,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "tRONvelvybba",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Numpy (mathematical library)\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "p4u_0GWjdEzK",
         "colab_type": "code",
         "colab": {}
@@ -152,13 +166,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "6c924e75-4cca-42b3-93a9-98900deb3e6b"
+        "outputId": "75afb81b-dd98-4cfa-a953-0fa8b1a75b71"
       },
       "source": [
         "# Return head of dataframe\n",
         "df.head()"
       ],
-      "execution_count": 176,
+      "execution_count": 534,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,7 +388,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 176
+          "execution_count": 534
         }
       ]
     },
@@ -387,13 +401,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 351
         },
-        "outputId": "db78778f-91a8-4c48-93dc-517e36070f79"
+        "outputId": "093b091c-0519-437e-fb46-d335199783d5"
       },
       "source": [
         "# Get summary statistics\n",
         "df.describe()"
       ],
-      "execution_count": 177,
+      "execution_count": 535,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +632,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 177
+          "execution_count": 535
         }
       ]
     },
@@ -631,14 +645,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 265
         },
-        "outputId": "5b825038-b8e2-41c0-84d7-230fcb61c007"
+        "outputId": "a7504657-501a-4571-c6f4-d8ae88d5b5e8"
       },
       "source": [
         "# Plot histogram of IMDB score\n",
         "df['IMDB Score'].plot(kind=\"hist\")\n",
         "plt.show()"
       ],
-      "execution_count": 178,
+      "execution_count": 536,
       "outputs": [
         {
           "output_type": "display_data",
@@ -677,12 +691,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "7fd766be-3549-43ab-f41d-a9aee5ba596f"
+        "outputId": "f3fa87a6-f3ad-4d16-9974-9eab509fe45c"
       },
       "source": [
         "table.head()"
       ],
-      "execution_count": 180,
+      "execution_count": 538,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +858,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 180
+          "execution_count": 538
         }
       ]
     },
@@ -857,7 +871,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 296
         },
-        "outputId": "b98499f2-1a86-4fa3-dd6a-68df71847bbf"
+        "outputId": "c07489bc-ac83-4168-f159-d5af34987c3e"
       },
       "source": [
         "# Plot average IMDB rating as a function of year\n",
@@ -865,7 +879,7 @@
         "plt.xlabel('Year')\n",
         "plt.ylabel('IMDB Score')"
       ],
-      "execution_count": 181,
+      "execution_count": 539,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -877,7 +891,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 181
+          "execution_count": 539
         },
         {
           "output_type": "display_data",
@@ -902,15 +916,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 307
         },
-        "outputId": "51b82c66-6cd7-4d5a-edb9-04d4b5267427"
+        "outputId": "15bf47e3-d129-498d-bc48-791bfeae5360"
       },
       "source": [
-        "# Plot average IMDB rating as a function of year\n",
+        "# Plot average net profit as a function of year\n",
         "plt.plot(table['Year'], table['Net Profit'])\n",
         "plt.xlabel('Year')\n",
         "plt.ylabel('Net Profit')"
       ],
-      "execution_count": 182,
+      "execution_count": 540,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +936,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 182
+          "execution_count": 540
         },
         {
           "output_type": "display_data",
@@ -980,6 +994,117 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "JS3LM_CksQZt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d4143983-006f-4cb0-b972-49c5e459ae1b"
+      },
+      "source": [
+        "# Get value of a cell \n",
+        "ws['A1'].value"
+      ],
+      "execution_count": 543,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Title'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 543
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UeYi4ktXweDW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 442
+        },
+        "outputId": "0b4785d6-0ec6-4c98-f546-7dd7c09a0e75"
+      },
+      "source": [
+        "# Iterate over columns of first row\n",
+        "headers = []\n",
+        "for h in ws.iter_cols(max_row=1):\n",
+        "  headers.append(h[0].value)\n",
+        "headers"
+      ],
+      "execution_count": 544,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Title',\n",
+              " 'Year',\n",
+              " 'Genres',\n",
+              " 'Language',\n",
+              " 'Country',\n",
+              " 'Content Rating',\n",
+              " 'Duration',\n",
+              " 'Aspect Ratio',\n",
+              " 'Budget',\n",
+              " 'Gross Earnings',\n",
+              " 'Director',\n",
+              " 'Actor 1',\n",
+              " 'Actor 2',\n",
+              " 'Actor 3',\n",
+              " 'Facebook Likes - Director',\n",
+              " 'Facebook Likes - Actor 1',\n",
+              " 'Facebook Likes - Actor 2',\n",
+              " 'Facebook Likes - Actor 3',\n",
+              " 'Facebook Likes - cast Total',\n",
+              " 'Facebook likes - Movie',\n",
+              " 'Facenumber in posters',\n",
+              " 'User Votes',\n",
+              " 'Reviews by Users',\n",
+              " 'Reviews by Crtiics',\n",
+              " 'IMDB Score']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 544
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MtsJ9Jo8sSqp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create new column with new data \n",
+        "num_columns = ws.max_column\n",
+        "num_rows = ws.max_row\n",
+        "ws.cell(row=1, column=num_columns + 1, value='Net Profit')\n",
+        "for i in range(2, num_rows + 1):\n",
+        "  earnings = ws.cell(row=i, column=headers.index('Gross Earnings')+1).value\n",
+        "  budget = ws.cell(row=i, column=headers.index('Budget')+1).value\n",
+        "  if earnings is not None and budget is not None:\n",
+        "    profit = earnings - budget\n",
+        "    ws.cell(row=i, column=num_columns + 1, value=profit)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "BcOD8SgKcdk4",
         "colab_type": "code",
         "colab": {}
@@ -1000,13 +1125,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "53bd1f5f-ecf7-4f55-8b0c-bb5740ee2428"
+        "outputId": "92fb3cd8-0dca-4f9d-821a-7e20acf97ccf"
       },
       "source": [
         "# Check new file created\n",
         "os.listdir('.')\n"
       ],
-      "execution_count": 186,
+      "execution_count": 547,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1143,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 186
+          "execution_count": 547
         }
       ]
     },
@@ -1031,14 +1156,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "8f092d28-4799-4016-cba5-79ef15f5b406"
+        "outputId": "235ffc29-8c65-4d73-f65a-9cd0812c4f80"
       },
       "source": [
         "# Read new workbook into Pandas to show edits \n",
         "df = pd.read_excel('movies_edit.xlsx')\n",
         "df.head()"
       ],
-      "execution_count": 187,
+      "execution_count": 548,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,6 +1212,7 @@
               "      <th>Reviews by Users</th>\n",
               "      <th>Reviews by Crtiics</th>\n",
               "      <th>IMDB Score</th>\n",
+              "      <th>Net Profit</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1117,6 +1243,7 @@
               "      <td>88</td>\n",
               "      <td>69.0</td>\n",
               "      <td>8.0</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -1145,6 +1272,7 @@
               "      <td>1</td>\n",
               "      <td>1.0</td>\n",
               "      <td>4.8</td>\n",
+              "      <td>2900000.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -1173,6 +1301,7 @@
               "      <td>45</td>\n",
               "      <td>48.0</td>\n",
               "      <td>8.3</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -1201,6 +1330,7 @@
               "      <td>413</td>\n",
               "      <td>260.0</td>\n",
               "      <td>8.3</td>\n",
+              "      <td>-5973565.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -1229,26 +1359,27 @@
               "      <td>84</td>\n",
               "      <td>71.0</td>\n",
               "      <td>8.0</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                               Title  ...  IMDB Score\n",
-              "0  Intolerance: Love's Struggle Throughout the Ages   ...         8.0\n",
-              "1                    Over the Hill to the Poorhouse   ...         4.8\n",
-              "2                                    The Big Parade   ...         8.3\n",
-              "3                                        Metropolis   ...         8.3\n",
-              "4                                     Pandora's Box   ...         8.0\n",
+              "                                               Title  ...  Net Profit\n",
+              "0  Intolerance: Love's Struggle Throughout the Ages   ...         NaN\n",
+              "1                    Over the Hill to the Poorhouse   ...   2900000.0\n",
+              "2                                    The Big Parade   ...         NaN\n",
+              "3                                        Metropolis   ...  -5973565.0\n",
+              "4                                     Pandora's Box   ...         NaN\n",
               "\n",
-              "[5 rows x 25 columns]"
+              "[5 rows x 26 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 187
+          "execution_count": 548
         }
       ]
     },
