--- a/basics.ipynb
+++ b/basics.ipynb
@@ -38,13 +38,694 @@
       "metadata": {
         "id": "ThuZ687B1Xk0",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a2980879-79ed-4d18-b9c7-790c8b140bac"
+      },
+      "source": [
+        "2+2"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XjsE69891qUm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cbc52ea5-e6c7-4a5f-cf92-f847a95d01c3"
+      },
+      "source": [
+        "2+2 # This is a comment"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wGeWzEfS1vGE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5bfcd4fd-1d0c-4b4e-f315-b3e92bf9acf3"
+      },
+      "source": [
+        "# Assignment\n",
+        "width = 20\n",
+        "height = 5*9\n",
+        "width*height"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "900"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fa48ruCd19n_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Numbers"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Jx9H3ZC1xKU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a6455038-6ec9-4260-952b-cb06814b02c2"
+      },
+      "source": [
+        "10 / 3 # Beware Python2 versus Python3"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.3333333333333335"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dCatzkeu2FQz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "259f1ab2-aed6-40f3-8eb6-9c62ef2fcb8b"
+      },
+      "source": [
+        "10**3"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4GZnwhFO2Jtr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "895fdf8a-ae67-4835-a5f4-6ee1487e441e"
+      },
+      "source": [
+        "import math # Note that imports should usually be at top of code\n",
+        "math.sqrt(4) "
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bxxw7ImK2gPl",
+        "colab_type": "text"
+      },
+      "source": [
+        "Strings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3VEJKH7p2OTT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d4a5a766-1852-456d-ee2e-f6f667b0fdc4"
+      },
+      "source": [
+        "'spam and eggs'"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'spam and eggs'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8b8j3Ebt2ijj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1e4a4b73-530f-4615-f12a-a5fd3ffa6eaf"
+      },
+      "source": [
+        "\"doesn't\""
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"doesn't\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OAXoqB0R2lVy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "35935283-4f21-44fb-9076-8e1f4005d04f"
+      },
+      "source": [
+        "hello = 'Greetings'\n",
+        "hello"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Greetings'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TsIpmUrp2sIL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Lists"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4aXazlnM2o2z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "65793879-3d4f-4c57-bf9d-2803a0a107de"
+      },
+      "source": [
+        "a = [1, 2, 4, 8, hello]\n",
+        "a[4]"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Greetings'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xrPSX86y2xMD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "67bc1e68-8e4e-4911-afe1-2887db6208ec"
+      },
+      "source": [
+        "# Slicing a list\n",
+        "a[0:2]"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HHh8xBas26gM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bee565b9-40f5-4983-a7b3-f99841ecde13"
+      },
+      "source": [
+        "# Length of list\n",
+        "len(a)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EB97xr3i3LT9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "62187a18-e184-4d6b-a3f2-bf131db94a58"
+      },
+      "source": [
+        "# Concatenate\n",
+        "c = [4, 'candles']\n",
+        "a + c"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 4, 8, 'Greetings', 4, 'candles']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DunUuQQ53W7k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "42879a11-e663-49e8-cd95-27983268e51f"
+      },
+      "source": [
+        "# Append\n",
+        "a.append(2)\n",
+        "a"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 4, 8, 'Greetings', 2]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QOYasZfu3jLy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Conditionals"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AW25Rx2G3gs_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "fcbb0f17-0da6-4ff2-c927-3652719db732"
+      },
+      "source": [
+        "a = 4\n",
+        "b = 3\n",
+        "a > b"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z7HJ_AT33pd7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ed6275db-b0b1-4d36-bd68-4b08f346bdee"
+      },
+      "source": [
+        "# Be wary of indentation - be consistent and use 4 spaces \n",
+        "if a > b: \n",
+        "  result = 'bigger'\n",
+        "elif a == b:\n",
+        "  result = 'same'\n",
+        "else:\n",
+        "  result = 'smaller'\n",
+        "result\n"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'bigger'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G02_Upwd4NwT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Loops"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MgxV4II336yL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "97c071f2-3987-4595-c637-ad87eaa58eb9"
+      },
+      "source": [
+        "a = 0\n",
+        "while a < 10:\n",
+        "  a += 3\n",
+        "  print(a)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "6\n",
+            "9\n",
+            "12\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J2TrmlKL4RA0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "88a9a12f-3aab-4d2c-d9b7-2b753eb43541"
+      },
+      "source": [
+        "for i in [2, 5, 3]:\n",
+        "  print(i*2)"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "10\n",
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7VQZpR574dOD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "3329b229-c714-4f00-ae12-1e9c7badafe9"
+      },
+      "source": [
+        "for i in range(5):\n",
+        "  print(i)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rXQMDzNU4kYL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Functions"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iimQvS2J4hC7",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "def my_function(x, y):\n",
+        "  return x + y"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "djPcZWuQ4prz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b09f50c1-6db4-40d1-fbdb-832f345c54e1"
+      },
+      "source": [
+        "my_function(2, 3)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 57
+        }
+      ]
     }
   ]
 }
