--- a/demo.ipynb
+++ b/demo.ipynb
@@ -162,17 +162,17 @@
       "metadata": {
         "id": "H-EkuFtndlnR",
         "colab_type": "code",
+        "outputId": "1a2c78c3-3b7b-4a07-da6b-3286644fd836",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
-        },
-        "outputId": "75afb81b-dd98-4cfa-a953-0fa8b1a75b71"
+        }
       },
       "source": [
         "# Return head of dataframe\n",
         "df.head()"
       ],
-      "execution_count": 534,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +388,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 534
+          "execution_count": 11
         }
       ]
     },
@@ -397,17 +397,17 @@
       "metadata": {
         "id": "rpZ7gIL2fkjP",
         "colab_type": "code",
+        "outputId": "8c9dcf1d-f619-4743-f1ea-33585bb68ee0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 351
-        },
-        "outputId": "093b091c-0519-437e-fb46-d335199783d5"
+        }
       },
       "source": [
         "# Get summary statistics\n",
         "df.describe()"
       ],
-      "execution_count": 535,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -632,7 +632,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 535
+          "execution_count": 12
         }
       ]
     },
@@ -641,18 +641,18 @@
       "metadata": {
         "id": "Rc1XXz3Vewb2",
         "colab_type": "code",
+        "outputId": "8a541879-8d8e-4de0-c74e-6fa334e4205d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "a7504657-501a-4571-c6f4-d8ae88d5b5e8"
+        }
       },
       "source": [
         "# Plot histogram of IMDB score\n",
         "df['IMDB Score'].plot(kind=\"hist\")\n",
         "plt.show()"
       ],
-      "execution_count": 536,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -687,16 +687,16 @@
       "metadata": {
         "id": "lNTHI7oLhWcy",
         "colab_type": "code",
+        "outputId": "5306f439-8970-4be1-fd4a-8e250aef5fa9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        },
-        "outputId": "f3fa87a6-f3ad-4d16-9974-9eab509fe45c"
+        }
       },
       "source": [
         "table.head()"
       ],
-      "execution_count": 538,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 538
+          "execution_count": 15
         }
       ]
     },
@@ -867,11 +867,11 @@
       "metadata": {
         "id": "0fqm_IgwgtIL",
         "colab_type": "code",
+        "outputId": "6096432e-8348-400e-c5a5-5949b22db800",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        },
-        "outputId": "c07489bc-ac83-4168-f159-d5af34987c3e"
+        }
       },
       "source": [
         "# Plot average IMDB rating as a function of year\n",
@@ -879,7 +879,7 @@
         "plt.xlabel('Year')\n",
         "plt.ylabel('IMDB Score')"
       ],
-      "execution_count": 539,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +891,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 539
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
@@ -912,11 +912,11 @@
       "metadata": {
         "id": "EEVUc01Ynp7E",
         "colab_type": "code",
+        "outputId": "a70df03e-cadb-44ff-d40f-156cdc3fac82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 307
-        },
-        "outputId": "15bf47e3-d129-498d-bc48-791bfeae5360"
+        }
       },
       "source": [
         "# Plot average net profit as a function of year\n",
@@ -924,7 +924,7 @@
         "plt.xlabel('Year')\n",
         "plt.ylabel('Net Profit')"
       ],
-      "execution_count": 540,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -936,7 +936,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 540
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -996,17 +996,17 @@
       "metadata": {
         "id": "JS3LM_CksQZt",
         "colab_type": "code",
+        "outputId": "d98c0197-ef0f-4a36-9c73-056d541595d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d4143983-006f-4cb0-b972-49c5e459ae1b"
+        }
       },
       "source": [
         "# Get value of a cell \n",
         "ws['A1'].value"
       ],
-      "execution_count": 543,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1018,7 +1018,39 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 543
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bC4mtJUE5T3s",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e85ad28d-a037-447f-efd2-1004dca17ba4"
+      },
+      "source": [
+        "# Modify value of a cell\n",
+        "ws.cell(row=1, column=1, value='Film Title')\n",
+        "ws.cell(row=1, column=1).value\n"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Film Title'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
         }
       ]
     },
@@ -1027,11 +1059,11 @@
       "metadata": {
         "id": "UeYi4ktXweDW",
         "colab_type": "code",
+        "outputId": "61d5cf47-8ce7-4f14-86a1-3c599205d2a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
-        },
-        "outputId": "0b4785d6-0ec6-4c98-f546-7dd7c09a0e75"
+        }
       },
       "source": [
         "# Iterate over columns of first row\n",
@@ -1040,13 +1072,13 @@
         "  headers.append(h[0].value)\n",
         "headers"
       ],
-      "execution_count": 544,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['Title',\n",
+              "['Film Title',\n",
               " 'Year',\n",
               " 'Genres',\n",
               " 'Language',\n",
@@ -1076,7 +1108,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 544
+          "execution_count": 22
         }
       ]
     },
@@ -1121,29 +1153,29 @@
       "metadata": {
         "id": "4PfhCUV3p3qe",
         "colab_type": "code",
+        "outputId": "ff7d4b3d-fe02-4254-d3ae-cfcee10b826f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "92fb3cd8-0dca-4f9d-821a-7e20acf97ccf"
+        }
       },
       "source": [
         "# Check new file created\n",
         "os.listdir('.')\n"
       ],
-      "execution_count": 547,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['.config', 'movies_edit.xlsx', 'balances.xlsx', 'sample_data']"
+              "['.config', 'movies_edit.xlsx', 'sample_data']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 547
+          "execution_count": 25
         }
       ]
     },
@@ -1152,18 +1184,18 @@
       "metadata": {
         "id": "vC3J0XAiqCrf",
         "colab_type": "code",
+        "outputId": "bf41e40d-bbb5-4997-f2e8-1f6de697a4f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 462
-        },
-        "outputId": "235ffc29-8c65-4d73-f65a-9cd0812c4f80"
+        }
       },
       "source": [
         "# Read new workbook into Pandas to show edits \n",
         "df = pd.read_excel('movies_edit.xlsx')\n",
         "df.head()"
       ],
-      "execution_count": 548,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1187,7 +1219,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Title</th>\n",
+              "      <th>Film Title</th>\n",
               "      <th>Year</th>\n",
               "      <th>Genres</th>\n",
               "      <th>Language</th>\n",
@@ -1366,7 +1398,7 @@
               "</div>"
             ],
             "text/plain": [
-              "                                               Title  ...  Net Profit\n",
+              "                                          Film Title  ...  Net Profit\n",
               "0  Intolerance: Love's Struggle Throughout the Ages   ...         NaN\n",
               "1                    Over the Hill to the Poorhouse   ...   2900000.0\n",
               "2                                    The Big Parade   ...         NaN\n",
@@ -1379,22 +1411,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 548
+          "execution_count": 26
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W83ROt9mrTqL",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
